created policy section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,27 @@
     <!------------------------------------------------------
          POLICY SECTION START
     ------------------------------------------------------>
-    <section id="policy"></section>
+    <section id="policy">
+      <h1>OUR SERVICES</h1>
+      <div class="card-div">
+        <div class="card">
+          <i class="fa-solid fa-check"></i>
+          <p>Quality Product</p>
+        </div>
+        <div class="card">
+          <i class="fa-solid fa-truck-fast"></i>
+          <p>Free Shipping</p>
+        </div>
+        <div class="card">
+          <i class="fa-solid fa-arrow-right-arrow-left"></i>
+          <p>7-Day Return</p>
+        </div>
+        <div class="card">
+          <i class="fa-solid fa-phone-volume"></i>
+          <p>24/7 Support</p>
+        </div>
+      </div>
+    </section>
     <!------------------------------------------------------
          POLICY SECTION END
     ------------------------------------------------------>
