created shop section

--- a/index.html
+++ b/index.html
@@ -65,25 +65,67 @@
       <h1>OUR SERVICES</h1>
       <div class="card-div">
         <div class="card">
-          <i class="fa-solid fa-check"></i>
+          <i class="fa-solid fa-check fa-bounce"></i>
           <p>Quality Product</p>
         </div>
         <div class="card">
-          <i class="fa-solid fa-truck-fast"></i>
+          <i class="fa-solid fa-truck-fast fa-bounce"></i>
           <p>Free Shipping</p>
         </div>
         <div class="card">
-          <i class="fa-solid fa-arrow-right-arrow-left"></i>
+          <i class="fa-solid fa-arrow-right-arrow-left fa-bounce"></i>
           <p>7-Day Return</p>
         </div>
         <div class="card">
-          <i class="fa-solid fa-phone-volume"></i>
+          <i class="fa-solid fa-phone-volume fa-bounce"></i>
           <p>24/7 Support</p>
         </div>
       </div>
     </section>
     <!------------------------------------------------------
          POLICY SECTION END
+    ------------------------------------------------------>
+
+    <!------------------------------------------------------
+         SHOP SECTION START
+    ------------------------------------------------------>
+    <section id="shop">
+      <h1>SHOP</h1>
+      <div class="shop-div">
+        <div class="shop-card">
+          <h3>Women Dresses</h3>
+          <img src="images/women-dresses-collection.webp" alt="" />
+          <a href="">SHOP NOW</a>
+        </div>
+        <div class="shop-card">
+          <h3>Men Dresses</h3>
+          <img src="images/men-dresses-collection.webp" alt="" />
+          <a href="">SHOP NOW</a>
+        </div>
+        <div class="shop-card">
+          <h3>Bags & Accessories</h3>
+          <img src="images/Bags & Accessories.webp" alt="" />
+          <a href="">SHOP NOW</a>
+        </div>
+        <div class="shop-card">
+          <h3>Watches</h3>
+          <img src="images/Watches.webp" alt="" />
+          <a href="">SHOP NOW</a>
+        </div>
+        <div class="shop-card">
+          <h3>Jewelry</h3>
+          <img src="images/Jewelry.webp" alt="" />
+          <a href="">SHOP NOW</a>
+        </div>
+        <div class="shop-card">
+          <h3>Beauty & Fragrances</h3>
+          <img src="images/Beauty & Fragrances.webp" alt="" />
+          <a href="">SHOP NOW</a>
+        </div>
+      </div>
+    </section>
+    <!------------------------------------------------------
+         SHOP SECTION END
     ------------------------------------------------------>
   </body>
 </html>
