--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
     <!------------------------------------------------------
          FONT AWESOME CDN END 
     ------------------------------------------------------>
+    <!------------------------------------------------------
+        GOOGLE FONT CDN END 
+    ------------------------------------------------------>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <!------------------------------------------------------
+        GOOGLE FONT CDN END 
+    ------------------------------------------------------>
   </head>
   <body>
     <!------------------------------------------------------
@@ -43,10 +55,11 @@
     ------------------------------------------------------>
     <section id="header">
       <h1>
-        FASHION THAT
+        ROYAL
         <span style="background-color: #03a4ed; color: white; padding: 0px 10px"
-          >FITS YOUR LIFE</span
+          >THREAD</span
         >
+        <h3>Fashion That Fits Your Life!</h3>
       </h1>
       <p>Elevate Your Style: Where Fashion Meets Passion.</p>
       <!-- <p>Empower Your Wardrobe: Unleash Your Inner Confidence.</p>
@@ -126,6 +139,57 @@
     </section>
     <!------------------------------------------------------
          SHOP SECTION END
+    ------------------------------------------------------>
+
+    <!------------------------------------------------------
+         ABOUT US SECTION START
+    ------------------------------------------------------>
+    <section id="about">
+      <h1>
+        ROYAL
+        <span style="background-color: #03a4ed; padding: 0px 5px; color: white">
+          THREAD
+        </span>
+      </h1>
+      <h3>ABOUT US</h3>
+      <p>
+        Welcome to
+        <span style="color: #ff695f"><b> Royal </b></span
+        ><span style="color: #03a4ed"><b> Thread </b></span>, Your Destination
+        for Style and Elegance, we believe that fashion is more than just
+        clothing; it's a way of expressing your unique personality and style.
+        Our journey began with a passion for helping people look and feel their
+        best. Today, we are proud to be a one-stop destination for all your
+        fashion and beauty needs, offering a curated collection of men's and
+        women's clothing, accessories, jewelry, beauty products, and fragrances.
+      </p>
+      <h3>OUR VISION</h3>
+      <p>
+        Our vision is simple - to empower our customers to look and feel their
+        best, regardless of the occasion. Whether you're dressing up for a
+        special event, refreshing your wardrobe, or looking for that perfect
+        gift, we've got you covered. We believe that fashion should be a form of
+        self-expression, and every item in our collection is carefully curated
+        to help you make a statement that's uniquely yours.
+      </p>
+      <h3>CONNECT WITH US</h3>
+      <p>
+        We value the connection we have with our customers and invite you to
+        reach out to us with any questions, feedback, or special requests. We
+        love hearing from you and are committed to making your shopping
+        experience as enjoyable as possible.
+      </p>
+      <p>
+        <br />
+        Thank you for choosing <span style="color: #ff695f"><b> Royal </b></span
+        ><span style="color: #03a4ed"><b> Thread </b></span> as your fashion and
+        beauty destination. We look forward to being a part of your fashion
+        journey and helping you express your unique style. Together, let's make
+        every day a stylish one!
+      </p>
+    </section>
+    <!------------------------------------------------------
+         ABOUT US SECTION END
     ------------------------------------------------------>
   </body>
 </html>
