--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="shop-card">
           <h3>Women Dresses</h3>
           <img src="images/women-dresses-collection.webp" alt="" />
-          <a href="">SHOP NOW</a>
+          <a href="women-collection.html">SHOP NOW</a>
         </div>
         <div class="shop-card">
           <h3>Men Dresses</h3>
