--- a/index.html
+++ b/index.html
@@ -66,14 +66,16 @@
     ------------------------------------------------------>
     <nav>
       <div class="nav-left">
-        <img src="images/logo.png" alt="ROYAL THREAD" class="logo" />
+        <a href="index.html"
+          ><img src="images/logo.png" alt="ROYAL THREAD" class="logo"
+        /></a>
       </div>
       <div class="nav-right">
         <ul>
-          <li><a href="" class="active">Home</a></li>
-          <li><a href="">Shop</a></li>
-          <li><a href="">About us</a></li>
-          <li><a href="">Comments</a></li>
+          <li><a href="#header" class="active">Home</a></li>
+          <li><a href="#shop">Shop</a></li>
+          <li><a href="#about">About us</a></li>
+          <li><a href="comments.html">Comments</a></li>
         </ul>
         <a class="button">Contact Us</a>
       </div>
