--- a/women-collection.html
+++ b/women-collection.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ROYAL THREAD</title>
+    <title>WOMEN COLLECTION</title>
     <link rel="stylesheet" href="css/women-collection.css" />
     <!------------------------------------------------------
          FAVICON START
@@ -66,7 +66,9 @@
     ------------------------------------------------------>
     <nav>
       <div class="nav-left">
-        <img src="images/logo.png" alt="ROYAL THREAD" class="logo" />
+        <a href="index.html"
+          ><img src="images/logo.png" alt="ROYAL THREAD" class="logo"
+        /></a>
       </div>
       <div class="nav-right">
         <ul>
@@ -145,6 +147,14 @@
             <label for="check">BOTTOM</label>
           </div>
         </div>
+      </div>
+      <div class="collection-div">
+        <div class="card">
+          <figure>
+            <h4>Printed Top</h4>
+          </figure>
+        </div>
+        <div class="card"></div>
       </div>
     </section>
   </body>
