created active sections on clicking navbar options

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ROYAL THREAD</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <!------------------------------------------------------
          FAVICON START
     ------------------------------------------------------>
@@ -70,10 +70,10 @@
       </div>
       <div class="nav-right">
         <ul>
-          <li><a href="" class="active">Home</a></li>
-          <li><a href="">Shop</a></li>
-          <li><a href="">About us</a></li>
-          <li><a href="">Comments</a></li>
+          <li><a href="#header" class="home active" >Home</a></li>
+          <li><a href="#shop" class="shop" >Shop</a></li>
+          <li><a href="#about" class="aboutUs" >About us</a></li>
+          <li><a href="" class="comments">Comments</a></li>
         </ul>
         <a class="button">Contact Us</a>
       </div>
@@ -223,5 +223,6 @@
     <!------------------------------------------------------
          ABOUT US SECTION END
     ------------------------------------------------------>
+    <script src="js/index.js"></script>
   </body>
 </html>
