created card in women collection page

--- a/women-collection.html
+++ b/women-collection.html
@@ -150,11 +150,269 @@
       </div>
       <div class="collection-div">
         <div class="card">
-          <figure>
-            <h4>Printed Top</h4>
-          </figure>
+          <div class="card-left"><img src="images/women.jpg" alt="" /></div>
+          <div class="card-right">
+            <h3>03 PIECE LAWN SUIT</h3>
+            <div><span>Product code :</span><span>56964</span></div>
+            <div>
+              <span>Size :</span
+              ><span
+                ><select name="" id="">
+                  <option value="Small">Small</option>
+                  <option value="Medium">Medium</option>
+                  <option value="Large">Large</option>
+                  <option value="Extra Large">Extra Large</option>
+                </select></span
+              >
+            </div>
+            <div>
+              <span>Color :</span
+              ><span
+                ><select name="" id="">
+                  <option value="Red">Red</option>
+                  <option value="Blue">Blue</option>
+                  <option value="Green">Green</option>
+                  <option value="Orange">Orange</option>
+                </select></span
+              >
+            </div>
+            <div><span>Price</span><span>PKR.4000</span></div>
+            <div><span>DISCOUNT:</span><span>20% OFF</span></div>
+            <div><span>CURRENT PRICE:</span><span>PKR. 3200</span></div>
+            <div id="order-btn-div"><button>ORDER NOW</button></div>
+          </div>
         </div>
-        <div class="card"></div>
+        <div class="card">
+          <div class="card-left"><img src="images/women.jpg" alt="" /></div>
+          <div class="card-right">
+            <h3>03 PIECE LAWN SUIT</h3>
+            <div><span>Product code :</span><span>56964</span></div>
+            <div>
+              <span>Size :</span
+              ><span
+                ><select name="" id="">
+                  <option value="Small">Small</option>
+                  <option value="Medium">Medium</option>
+                  <option value="Large">Large</option>
+                  <option value="Extra Large">Extra Large</option>
+                </select></span
+              >
+            </div>
+            <div>
+              <span>Color :</span
+              ><span
+                ><select name="" id="">
+                  <option value="Red">Red</option>
+                  <option value="Blue">Blue</option>
+                  <option value="Green">Green</option>
+                  <option value="Orange">Orange</option>
+                </select></span
+              >
+            </div>
+            <div><span>Price</span><span>PKR.4000</span></div>
+            <div><span>DISCOUNT:</span><span>20% OFF</span></div>
+            <div><span>CURRENT PRICE:</span><span>PKR. 3200</span></div>
+            <div id="order-btn-div"><button>ORDER NOW</button></div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-left"><img src="images/women.jpg" alt="" /></div>
+          <div class="card-right">
+            <h3>03 PIECE LAWN SUIT</h3>
+            <div><span>Product code :</span><span>56964</span></div>
+            <div>
+              <span>Size :</span
+              ><span
+                ><select name="" id="">
+                  <option value="Small">Small</option>
+                  <option value="Medium">Medium</option>
+                  <option value="Large">Large</option>
+                  <option value="Extra Large">Extra Large</option>
+                </select></span
+              >
+            </div>
+            <div>
+              <span>Color :</span
+              ><span
+                ><select name="" id="">
+                  <option value="Red">Red</option>
+                  <option value="Blue">Blue</option>
+                  <option value="Green">Green</option>
+                  <option value="Orange">Orange</option>
+                </select></span
+              >
+            </div>
+            <div><span>Price</span><span>PKR.4000</span></div>
+            <div><span>DISCOUNT:</span><span>20% OFF</span></div>
+            <div><span>CURRENT PRICE:</span><span>PKR. 3200</span></div>
+            <div id="order-btn-div"><button>ORDER NOW</button></div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-left"><img src="images/women.jpg" alt="" /></div>
+          <div class="card-right">
+            <h3>03 PIECE LAWN SUIT</h3>
+            <div><span>Product code :</span><span>56964</span></div>
+            <div>
+              <span>Size :</span
+              ><span
+                ><select name="" id="">
+                  <option value="Small">Small</option>
+                  <option value="Medium">Medium</option>
+                  <option value="Large">Large</option>
+                  <option value="Extra Large">Extra Large</option>
+                </select></span
+              >
+            </div>
+            <div>
+              <span>Color :</span
+              ><span
+                ><select name="" id="">
+                  <option value="Red">Red</option>
+                  <option value="Blue">Blue</option>
+                  <option value="Green">Green</option>
+                  <option value="Orange">Orange</option>
+                </select></span
+              >
+            </div>
+            <div><span>Price</span><span>PKR.4000</span></div>
+            <div><span>DISCOUNT:</span><span>20% OFF</span></div>
+            <div><span>CURRENT PRICE:</span><span>PKR. 3200</span></div>
+            <div id="order-btn-div"><button>ORDER NOW</button></div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-left"><img src="images/women.jpg" alt="" /></div>
+          <div class="card-right">
+            <h3>03 PIECE LAWN SUIT</h3>
+            <div><span>Product code :</span><span>56964</span></div>
+            <div>
+              <span>Size :</span
+              ><span
+                ><select name="" id="">
+                  <option value="Small">Small</option>
+                  <option value="Medium">Medium</option>
+                  <option value="Large">Large</option>
+                  <option value="Extra Large">Extra Large</option>
+                </select></span
+              >
+            </div>
+            <div>
+              <span>Color :</span
+              ><span
+                ><select name="" id="">
+                  <option value="Red">Red</option>
+                  <option value="Blue">Blue</option>
+                  <option value="Green">Green</option>
+                  <option value="Orange">Orange</option>
+                </select></span
+              >
+            </div>
+            <div><span>Price</span><span>PKR.4000</span></div>
+            <div><span>DISCOUNT:</span><span>20% OFF</span></div>
+            <div><span>CURRENT PRICE:</span><span>PKR. 3200</span></div>
+            <div id="order-btn-div"><button>ORDER NOW</button></div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-left"><img src="images/women.jpg" alt="" /></div>
+          <div class="card-right">
+            <h3>03 PIECE LAWN SUIT</h3>
+            <div><span>Product code :</span><span>56964</span></div>
+            <div>
+              <span>Size :</span
+              ><span
+                ><select name="" id="">
+                  <option value="Small">Small</option>
+                  <option value="Medium">Medium</option>
+                  <option value="Large">Large</option>
+                  <option value="Extra Large">Extra Large</option>
+                </select></span
+              >
+            </div>
+            <div>
+              <span>Color :</span
+              ><span
+                ><select name="" id="">
+                  <option value="Red">Red</option>
+                  <option value="Blue">Blue</option>
+                  <option value="Green">Green</option>
+                  <option value="Orange">Orange</option>
+                </select></span
+              >
+            </div>
+            <div><span>Price</span><span>PKR.4000</span></div>
+            <div><span>DISCOUNT:</span><span>20% OFF</span></div>
+            <div><span>CURRENT PRICE:</span><span>PKR. 3200</span></div>
+            <div id="order-btn-div"><button>ORDER NOW</button></div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-left"><img src="images/women.jpg" alt="" /></div>
+          <div class="card-right">
+            <h3>03 PIECE LAWN SUIT</h3>
+            <div><span>Product code :</span><span>56964</span></div>
+            <div>
+              <span>Size :</span
+              ><span
+                ><select name="" id="">
+                  <option value="Small">Small</option>
+                  <option value="Medium">Medium</option>
+                  <option value="Large">Large</option>
+                  <option value="Extra Large">Extra Large</option>
+                </select></span
+              >
+            </div>
+            <div>
+              <span>Color :</span
+              ><span
+                ><select name="" id="">
+                  <option value="Red">Red</option>
+                  <option value="Blue">Blue</option>
+                  <option value="Green">Green</option>
+                  <option value="Orange">Orange</option>
+                </select></span
+              >
+            </div>
+            <div><span>Price</span><span>PKR.4000</span></div>
+            <div><span>DISCOUNT:</span><span>20% OFF</span></div>
+            <div><span>CURRENT PRICE:</span><span>PKR. 3200</span></div>
+            <div id="order-btn-div"><button>ORDER NOW</button></div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-left"><img src="images/women.jpg" alt="" /></div>
+          <div class="card-right">
+            <h3>03 PIECE LAWN SUIT</h3>
+            <div><span>Product code :</span><span>56964</span></div>
+            <div>
+              <span>Size :</span
+              ><span
+                ><select name="" id="">
+                  <option value="Small">Small</option>
+                  <option value="Medium">Medium</option>
+                  <option value="Large">Large</option>
+                  <option value="Extra Large">Extra Large</option>
+                </select></span
+              >
+            </div>
+            <div>
+              <span>Color :</span
+              ><span
+                ><select name="" id="">
+                  <option value="Red">Red</option>
+                  <option value="Blue">Blue</option>
+                  <option value="Green">Green</option>
+                  <option value="Orange">Orange</option>
+                </select></span
+              >
+            </div>
+            <div><span>Price</span><span>PKR.4000</span></div>
+            <div><span>DISCOUNT:</span><span>20% OFF</span></div>
+            <div><span>CURRENT PRICE:</span><span>PKR. 3200</span></div>
+            <div id="order-btn-div"><button>ORDER NOW</button></div>
+          </div>
+        </div>
       </div>
     </section>
   </body>
