created Type Writer Effects

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         >
         <h3>Fashion That Fits Your Life!</h3>
       </h1>
-      <p>Elevate Your Style: Where Fashion Meets Passion.</p>
+      <p class="typing"></p>
       <!-- <p>Empower Your Wardrobe: Unleash Your Inner Confidence.</p>
       <p>Fashioned for You, Inspired by Life.</p>
       <p>Discover the Art of Dressing: Your Fashion, Your Story.</p> -->
