--- a/women-collection.html
+++ b/women-collection.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WOMEN COLLECTION</title>
+    <title>WOMEN DRESSES</title>
     <link rel="stylesheet" href="css/women-collection.css" />
     <!------------------------------------------------------
          FAVICON START
@@ -72,10 +72,13 @@
       </div>
       <div class="nav-right">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="">Shop</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html#shop" class="active">Shop</a></li>
           <li><a href="">About us</a></li>
           <li><a href="">Comments</a></li>
+          <li>
+            <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+          </li>
         </ul>
         <a class="button">Contact Us</a>
       </div>
@@ -85,7 +88,7 @@
     ------------------------------------------------------>
     <section id="products-section">
       <div id="filter">
-        <h1>Filter</h1>
+        <h1>WOMEN DRESSES</h1>
         <div class="filter-box">
           <h4>STUFF TYPE</h4>
           <div class="checkbox-div">
@@ -149,11 +152,14 @@
         </div>
       </div>
       <div class="collection-div">
+        <!----------------------------------------------------
+         PRODUCT CARD START
+        ------------------------------------------------------>
         <div class="card">
           <div class="card-left"><img src="images/women.jpg" alt="" /></div>
           <div class="card-right">
             <h3>03 PIECE LAWN SUIT</h3>
-            <div><span>Product code :</span><span>56964</span></div>
+            <div><span>Product Code :</span><span>56964</span></div>
             <div>
               <span>Size :</span
               ><span
@@ -161,7 +167,7 @@
                   <option value="Small">Small</option>
                   <option value="Medium">Medium</option>
                   <option value="Large">Large</option>
-                  <option value="Extra Large">Extra Large</option>
+                  <option value="Extra Large">XL</option>
                 </select></span
               >
             </div>
@@ -177,19 +183,32 @@
               >
             </div>
             <div><span>Price</span><span>PKR.4000</span></div>
-            <div><span>DISCOUNT:</span><span>20% OFF</span></div>
-            <div><span>CURRENT PRICE:</span><span>PKR. 3200</span></div>
-            <div id="order-btn-div"><button>ORDER NOW</button></div>
+            <div><span>Discount:</span><span>20% OFF</span></div>
+            <div><span>Current Price:</span><span>PKR. 3200</span></div>
             <div id="photo-change-btn">
               <a href="">&#171;</a><a href="">&#187;</a>
             </div>
+            <div id="add-cart-btn">
+              <a href=""
+                >ADD TO CART &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
+                  class="fa-solid fa-cart-shopping fa-bounce"
+                  style="font-size: 14px"
+                ></i
+              ></a>
+            </div>
           </div>
         </div>
+        <!----------------------------------------------------
+         PRODUCT CARD END
+        ------------------------------------------------------>
+        <!----------------------------------------------------
+         PRODUCT CARD START
+        ------------------------------------------------------>
         <div class="card">
           <div class="card-left"><img src="images/women.jpg" alt="" /></div>
           <div class="card-right">
             <h3>03 PIECE LAWN SUIT</h3>
-            <div><span>Product code :</span><span>56964</span></div>
+            <div><span>Product Code :</span><span>56964</span></div>
             <div>
               <span>Size :</span
               ><span
@@ -197,7 +216,7 @@
                   <option value="Small">Small</option>
                   <option value="Medium">Medium</option>
                   <option value="Large">Large</option>
-                  <option value="Extra Large">Extra Large</option>
+                  <option value="Extra Large">XL</option>
                 </select></span
               >
             </div>
@@ -213,19 +232,32 @@
               >
             </div>
             <div><span>Price</span><span>PKR.4000</span></div>
-            <div><span>DISCOUNT:</span><span>20% OFF</span></div>
-            <div><span>CURRENT PRICE:</span><span>PKR. 3200</span></div>
-            <div id="order-btn-div"><button>ORDER NOW</button></div>
+            <div><span>Discount:</span><span>20% OFF</span></div>
+            <div><span>Current Price:</span><span>PKR. 3200</span></div>
             <div id="photo-change-btn">
               <a href="">&#171;</a><a href="">&#187;</a>
             </div>
+            <div id="add-cart-btn">
+              <a href=""
+                >ADD TO CART &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
+                  class="fa-solid fa-cart-shopping fa-bounce"
+                  style="font-size: 14px"
+                ></i
+              ></a>
+            </div>
           </div>
         </div>
+        <!----------------------------------------------------
+         PRODUCT CARD END
+        ------------------------------------------------------>
+        <!----------------------------------------------------
+         PRODUCT CARD START
+        ------------------------------------------------------>
         <div class="card">
           <div class="card-left"><img src="images/women.jpg" alt="" /></div>
           <div class="card-right">
             <h3>03 PIECE LAWN SUIT</h3>
-            <div><span>Product code :</span><span>56964</span></div>
+            <div><span>Product Code :</span><span>56964</span></div>
             <div>
               <span>Size :</span
               ><span
@@ -233,7 +265,7 @@
                   <option value="Small">Small</option>
                   <option value="Medium">Medium</option>
                   <option value="Large">Large</option>
-                  <option value="Extra Large">Extra Large</option>
+                  <option value="Extra Large">XL</option>
                 </select></span
               >
             </div>
@@ -249,19 +281,32 @@
               >
             </div>
             <div><span>Price</span><span>PKR.4000</span></div>
-            <div><span>DISCOUNT:</span><span>20% OFF</span></div>
-            <div><span>CURRENT PRICE:</span><span>PKR. 3200</span></div>
-            <div id="order-btn-div"><button>ORDER NOW</button></div>
+            <div><span>Discount:</span><span>20% OFF</span></div>
+            <div><span>Current Price:</span><span>PKR. 3200</span></div>
             <div id="photo-change-btn">
               <a href="">&#171;</a><a href="">&#187;</a>
             </div>
+            <div id="add-cart-btn">
+              <a href=""
+                >ADD TO CART &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
+                  class="fa-solid fa-cart-shopping fa-bounce"
+                  style="font-size: 14px"
+                ></i
+              ></a>
+            </div>
           </div>
         </div>
+        <!----------------------------------------------------
+         PRODUCT CARD END
+        ------------------------------------------------------>
+        <!----------------------------------------------------
+         PRODUCT CARD START
+        ------------------------------------------------------>
         <div class="card">
           <div class="card-left"><img src="images/women.jpg" alt="" /></div>
           <div class="card-right">
             <h3>03 PIECE LAWN SUIT</h3>
-            <div><span>Product code :</span><span>56964</span></div>
+            <div><span>Product Code :</span><span>56964</span></div>
             <div>
               <span>Size :</span
               ><span
@@ -269,7 +314,7 @@
                   <option value="Small">Small</option>
                   <option value="Medium">Medium</option>
                   <option value="Large">Large</option>
-                  <option value="Extra Large">Extra Large</option>
+                  <option value="Extra Large">XL</option>
                 </select></span
               >
             </div>
@@ -285,19 +330,32 @@
               >
             </div>
             <div><span>Price</span><span>PKR.4000</span></div>
-            <div><span>DISCOUNT:</span><span>20% OFF</span></div>
-            <div><span>CURRENT PRICE:</span><span>PKR. 3200</span></div>
-            <div id="order-btn-div"><button>ORDER NOW</button></div>
+            <div><span>Discount:</span><span>20% OFF</span></div>
+            <div><span>Current Price:</span><span>PKR. 3200</span></div>
             <div id="photo-change-btn">
               <a href="">&#171;</a><a href="">&#187;</a>
             </div>
+            <div id="add-cart-btn">
+              <a href=""
+                >ADD TO CART &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
+                  class="fa-solid fa-cart-shopping fa-bounce"
+                  style="font-size: 14px"
+                ></i
+              ></a>
+            </div>
           </div>
         </div>
+        <!----------------------------------------------------
+         PRODUCT CARD END
+        ------------------------------------------------------>
+        <!----------------------------------------------------
+         PRODUCT CARD START
+        ------------------------------------------------------>
         <div class="card">
           <div class="card-left"><img src="images/women.jpg" alt="" /></div>
           <div class="card-right">
             <h3>03 PIECE LAWN SUIT</h3>
-            <div><span>Product code :</span><span>56964</span></div>
+            <div><span>Product Code :</span><span>56964</span></div>
             <div>
               <span>Size :</span
               ><span
@@ -305,7 +363,7 @@
                   <option value="Small">Small</option>
                   <option value="Medium">Medium</option>
                   <option value="Large">Large</option>
-                  <option value="Extra Large">Extra Large</option>
+                  <option value="Extra Large">XL</option>
                 </select></span
               >
             </div>
@@ -321,19 +379,32 @@
               >
             </div>
             <div><span>Price</span><span>PKR.4000</span></div>
-            <div><span>DISCOUNT:</span><span>20% OFF</span></div>
-            <div><span>CURRENT PRICE:</span><span>PKR. 3200</span></div>
-            <div id="order-btn-div"><button>ORDER NOW</button></div>
+            <div><span>Discount:</span><span>20% OFF</span></div>
+            <div><span>Current Price:</span><span>PKR. 3200</span></div>
             <div id="photo-change-btn">
               <a href="">&#171;</a><a href="">&#187;</a>
             </div>
+            <div id="add-cart-btn">
+              <a href=""
+                >ADD TO CART &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
+                  class="fa-solid fa-cart-shopping fa-bounce"
+                  style="font-size: 14px"
+                ></i
+              ></a>
+            </div>
           </div>
         </div>
+        <!----------------------------------------------------
+         PRODUCT CARD END
+        ------------------------------------------------------>
+        <!----------------------------------------------------
+         PRODUCT CARD START
+        ------------------------------------------------------>
         <div class="card">
           <div class="card-left"><img src="images/women.jpg" alt="" /></div>
           <div class="card-right">
             <h3>03 PIECE LAWN SUIT</h3>
-            <div><span>Product code :</span><span>56964</span></div>
+            <div><span>Product Code :</span><span>56964</span></div>
             <div>
               <span>Size :</span
               ><span
@@ -341,7 +412,7 @@
                   <option value="Small">Small</option>
                   <option value="Medium">Medium</option>
                   <option value="Large">Large</option>
-                  <option value="Extra Large">Extra Large</option>
+                  <option value="Extra Large">XL</option>
                 </select></span
               >
             </div>
@@ -357,86 +428,24 @@
               >
             </div>
             <div><span>Price</span><span>PKR.4000</span></div>
-            <div><span>DISCOUNT:</span><span>20% OFF</span></div>
-            <div><span>CURRENT PRICE:</span><span>PKR. 3200</span></div>
-            <div id="order-btn-div"><button>ORDER NOW</button></div>
+            <div><span>Discount:</span><span>20% OFF</span></div>
+            <div><span>Current Price:</span><span>PKR. 3200</span></div>
             <div id="photo-change-btn">
               <a href="">&#171;</a><a href="">&#187;</a>
             </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-left"><img src="images/women.jpg" alt="" /></div>
-          <div class="card-right">
-            <h3>03 PIECE LAWN SUIT</h3>
-            <div><span>Product code :</span><span>56964</span></div>
-            <div>
-              <span>Size :</span
-              ><span
-                ><select name="" id="">
-                  <option value="Small">Small</option>
-                  <option value="Medium">Medium</option>
-                  <option value="Large">Large</option>
-                  <option value="Extra Large">Extra Large</option>
-                </select></span
-              >
-            </div>
-            <div>
-              <span>Color :</span
-              ><span
-                ><select name="" id="">
-                  <option value="Red">Red</option>
-                  <option value="Blue">Blue</option>
-                  <option value="Green">Green</option>
-                  <option value="Orange">Orange</option>
-                </select></span
-              >
-            </div>
-            <div><span>Price</span><span>PKR.4000</span></div>
-            <div><span>DISCOUNT:</span><span>20% OFF</span></div>
-            <div><span>CURRENT PRICE:</span><span>PKR. 3200</span></div>
-            <div id="order-btn-div"><button>ORDER NOW</button></div>
-            <div id="photo-change-btn">
-              <a href="">&#171;</a><a href="">&#187;</a>
+            <div id="add-cart-btn">
+              <a href=""
+                >ADD TO CART &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
+                  class="fa-solid fa-cart-shopping fa-bounce"
+                  style="font-size: 14px"
+                ></i
+              ></a>
             </div>
           </div>
         </div>
-        <div class="card">
-          <div class="card-left"><img src="images/women.jpg" alt="" /></div>
-          <div class="card-right">
-            <h3>03 PIECE LAWN SUIT</h3>
-            <div><span>Product code :</span><span>56964</span></div>
-            <div>
-              <span>Size :</span
-              ><span
-                ><select name="" id="">
-                  <option value="Small">Small</option>
-                  <option value="Medium">Medium</option>
-                  <option value="Large">Large</option>
-                  <option value="Extra Large">Extra Large</option>
-                </select></span
-              >
-            </div>
-            <div>
-              <span>Color :</span
-              ><span
-                ><select name="" id="">
-                  <option value="Red">Red</option>
-                  <option value="Blue">Blue</option>
-                  <option value="Green">Green</option>
-                  <option value="Orange">Orange</option>
-                </select></span
-              >
-            </div>
-            <div><span>Price</span><span>PKR.4000</span></div>
-            <div><span>DISCOUNT:</span><span>20% OFF</span></div>
-            <div><span>CURRENT PRICE:</span><span>PKR. 3200</span></div>
-            <div id="order-btn-div"><button>ORDER NOW</button></div>
-            <div id="photo-change-btn">
-              <a href="">&#171;</a><a href="">&#187;</a>
-            </div>
-          </div>
-        </div>
+        <!----------------------------------------------------
+         PRODUCT CARD END
+        ------------------------------------------------------>
       </div>
     </section>
   </body>
