updated women products size

--- a/women-collection.html
+++ b/women-collection.html
@@ -164,254 +164,9 @@
               <span>Size :</span
               ><span
                 ><select name="" id="">
-                  <option value="Small">Small</option>
-                  <option value="Medium">Medium</option>
-                  <option value="Large">Large</option>
-                  <option value="Extra Large">XL</option>
-                </select></span
-              >
-            </div>
-            <div>
-              <span>Color :</span
-              ><span
-                ><select name="" id="">
-                  <option value="Red">Red</option>
-                  <option value="Blue">Blue</option>
-                  <option value="Green">Green</option>
-                  <option value="Orange">Orange</option>
-                </select></span
-              >
-            </div>
-            <div><span>Price</span><span>PKR.4000</span></div>
-            <div><span>Discount:</span><span>20% OFF</span></div>
-            <div><span>Current Price:</span><span>PKR. 3200</span></div>
-            <div id="photo-change-btn">
-              <a href="">&#171;</a><a href="">&#187;</a>
-            </div>
-            <div id="add-cart-btn">
-              <a href=""
-                >ADD TO CART &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
-                  class="fa-solid fa-cart-shopping fa-bounce"
-                  style="font-size: 14px"
-                ></i
-              ></a>
-            </div>
-          </div>
-        </div>
-        <!----------------------------------------------------
-         PRODUCT CARD END
-        ------------------------------------------------------>
-        <!----------------------------------------------------
-         PRODUCT CARD START
-        ------------------------------------------------------>
-        <div class="card">
-          <div class="card-left"><img src="images/women.jpg" alt="" /></div>
-          <div class="card-right">
-            <h3>03 PIECE LAWN SUIT</h3>
-            <div><span>Product Code :</span><span>56964</span></div>
-            <div>
-              <span>Size :</span
-              ><span
-                ><select name="" id="">
-                  <option value="Small">Small</option>
-                  <option value="Medium">Medium</option>
-                  <option value="Large">Large</option>
-                  <option value="Extra Large">XL</option>
-                </select></span
-              >
-            </div>
-            <div>
-              <span>Color :</span
-              ><span
-                ><select name="" id="">
-                  <option value="Red">Red</option>
-                  <option value="Blue">Blue</option>
-                  <option value="Green">Green</option>
-                  <option value="Orange">Orange</option>
-                </select></span
-              >
-            </div>
-            <div><span>Price</span><span>PKR.4000</span></div>
-            <div><span>Discount:</span><span>20% OFF</span></div>
-            <div><span>Current Price:</span><span>PKR. 3200</span></div>
-            <div id="photo-change-btn">
-              <a href="">&#171;</a><a href="">&#187;</a>
-            </div>
-            <div id="add-cart-btn">
-              <a href=""
-                >ADD TO CART &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
-                  class="fa-solid fa-cart-shopping fa-bounce"
-                  style="font-size: 14px"
-                ></i
-              ></a>
-            </div>
-          </div>
-        </div>
-        <!----------------------------------------------------
-         PRODUCT CARD END
-        ------------------------------------------------------>
-        <!----------------------------------------------------
-         PRODUCT CARD START
-        ------------------------------------------------------>
-        <div class="card">
-          <div class="card-left"><img src="images/women.jpg" alt="" /></div>
-          <div class="card-right">
-            <h3>03 PIECE LAWN SUIT</h3>
-            <div><span>Product Code :</span><span>56964</span></div>
-            <div>
-              <span>Size :</span
-              ><span
-                ><select name="" id="">
-                  <option value="Small">Small</option>
-                  <option value="Medium">Medium</option>
-                  <option value="Large">Large</option>
-                  <option value="Extra Large">XL</option>
-                </select></span
-              >
-            </div>
-            <div>
-              <span>Color :</span
-              ><span
-                ><select name="" id="">
-                  <option value="Red">Red</option>
-                  <option value="Blue">Blue</option>
-                  <option value="Green">Green</option>
-                  <option value="Orange">Orange</option>
-                </select></span
-              >
-            </div>
-            <div><span>Price</span><span>PKR.4000</span></div>
-            <div><span>Discount:</span><span>20% OFF</span></div>
-            <div><span>Current Price:</span><span>PKR. 3200</span></div>
-            <div id="photo-change-btn">
-              <a href="">&#171;</a><a href="">&#187;</a>
-            </div>
-            <div id="add-cart-btn">
-              <a href=""
-                >ADD TO CART &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
-                  class="fa-solid fa-cart-shopping fa-bounce"
-                  style="font-size: 14px"
-                ></i
-              ></a>
-            </div>
-          </div>
-        </div>
-        <!----------------------------------------------------
-         PRODUCT CARD END
-        ------------------------------------------------------>
-        <!----------------------------------------------------
-         PRODUCT CARD START
-        ------------------------------------------------------>
-        <div class="card">
-          <div class="card-left"><img src="images/women.jpg" alt="" /></div>
-          <div class="card-right">
-            <h3>03 PIECE LAWN SUIT</h3>
-            <div><span>Product Code :</span><span>56964</span></div>
-            <div>
-              <span>Size :</span
-              ><span
-                ><select name="" id="">
-                  <option value="Small">Small</option>
-                  <option value="Medium">Medium</option>
-                  <option value="Large">Large</option>
-                  <option value="Extra Large">XL</option>
-                </select></span
-              >
-            </div>
-            <div>
-              <span>Color :</span
-              ><span
-                ><select name="" id="">
-                  <option value="Red">Red</option>
-                  <option value="Blue">Blue</option>
-                  <option value="Green">Green</option>
-                  <option value="Orange">Orange</option>
-                </select></span
-              >
-            </div>
-            <div><span>Price</span><span>PKR.4000</span></div>
-            <div><span>Discount:</span><span>20% OFF</span></div>
-            <div><span>Current Price:</span><span>PKR. 3200</span></div>
-            <div id="photo-change-btn">
-              <a href="">&#171;</a><a href="">&#187;</a>
-            </div>
-            <div id="add-cart-btn">
-              <a href=""
-                >ADD TO CART &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
-                  class="fa-solid fa-cart-shopping fa-bounce"
-                  style="font-size: 14px"
-                ></i
-              ></a>
-            </div>
-          </div>
-        </div>
-        <!----------------------------------------------------
-         PRODUCT CARD END
-        ------------------------------------------------------>
-        <!----------------------------------------------------
-         PRODUCT CARD START
-        ------------------------------------------------------>
-        <div class="card">
-          <div class="card-left"><img src="images/women.jpg" alt="" /></div>
-          <div class="card-right">
-            <h3>03 PIECE LAWN SUIT</h3>
-            <div><span>Product Code :</span><span>56964</span></div>
-            <div>
-              <span>Size :</span
-              ><span
-                ><select name="" id="">
-                  <option value="Small">Small</option>
-                  <option value="Medium">Medium</option>
-                  <option value="Large">Large</option>
-                  <option value="Extra Large">XL</option>
-                </select></span
-              >
-            </div>
-            <div>
-              <span>Color :</span
-              ><span
-                ><select name="" id="">
-                  <option value="Red">Red</option>
-                  <option value="Blue">Blue</option>
-                  <option value="Green">Green</option>
-                  <option value="Orange">Orange</option>
-                </select></span
-              >
-            </div>
-            <div><span>Price</span><span>PKR.4000</span></div>
-            <div><span>Discount:</span><span>20% OFF</span></div>
-            <div><span>Current Price:</span><span>PKR. 3200</span></div>
-            <div id="photo-change-btn">
-              <a href="">&#171;</a><a href="">&#187;</a>
-            </div>
-            <div id="add-cart-btn">
-              <a href=""
-                >ADD TO CART &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
-                  class="fa-solid fa-cart-shopping fa-bounce"
-                  style="font-size: 14px"
-                ></i
-              ></a>
-            </div>
-          </div>
-        </div>
-        <!----------------------------------------------------
-         PRODUCT CARD END
-        ------------------------------------------------------>
-        <!----------------------------------------------------
-         PRODUCT CARD START
-        ------------------------------------------------------>
-        <div class="card">
-          <div class="card-left"><img src="images/women.jpg" alt="" /></div>
-          <div class="card-right">
-            <h3>03 PIECE LAWN SUIT</h3>
-            <div><span>Product Code :</span><span>56964</span></div>
-            <div>
-              <span>Size :</span
-              ><span
-                ><select name="" id="">
-                  <option value="Small">Small</option>
-                  <option value="Medium">Medium</option>
-                  <option value="Large">Large</option>
+                  <option value="Small">S</option>
+                  <option value="Medium">M</option>
+                  <option value="Large">L</option>
                   <option value="Extra Large">XL</option>
                 </select></span
               >
