--- a/women-collection.html
+++ b/women-collection.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WOMEN DRESSES</title>
+    <title>WOMEN COLLECTION</title>
     <link rel="stylesheet" href="css/women-collection.css" />
     <!------------------------------------------------------
          FAVICON START
@@ -76,11 +76,10 @@
           <li><a href="index.html#shop" class="active">Shop</a></li>
           <li><a href="">About us</a></li>
           <li><a href="">Comments</a></li>
-          <li>
-            <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+          <li><i class="fa-solid fa-cart-shopping"></i>
           </li>
         </ul>
-        <a class="button">Contact Us</a>
+        <a class="button" >Contact Us</a>
       </div>
     </nav>
     <!----------------------------------------------------
@@ -185,10 +184,10 @@
             <div><span>Price</span><span>PKR.4000</span></div>
             <div><span>Discount:</span><span>20% OFF</span></div>
             <div><span>Current Price:</span><span>PKR. 3200</span></div>
-            <div id="photo-change-btn">
+                        <div id="photo-change-btn">
               <a href="">&#171;</a><a href="">&#187;</a>
             </div>
-            <div id="add-cart-btn">
+          <div id="add-cart-btn">
               <a href=""
                 >ADD TO CART &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
                   class="fa-solid fa-cart-shopping fa-bounce"
@@ -203,5 +202,9 @@
         ------------------------------------------------------>
       </div>
     </section>
+    <div class="cart-container">      
+      <i class="fa-regular fa-circle-xmark"></i>
+    </div>
   </body>
+  <script src="js/women-collection.js"></script>
 </html>
