created cart produts in women products page

--- a/women-collection.html
+++ b/women-collection.html
@@ -76,10 +76,9 @@
           <li><a href="index.html#shop" class="active">Shop</a></li>
           <li><a href="">About us</a></li>
           <li><a href="">Comments</a></li>
-          <li><i class="fa-solid fa-cart-shopping"></i>
-          </li>
+          <li><i class="fa-solid fa-cart-shopping"></i></li>
         </ul>
-        <a class="button" >Contact Us</a>
+        <a class="button">Contact Us</a>
       </div>
     </nav>
     <!----------------------------------------------------
@@ -184,10 +183,10 @@
             <div><span>Price</span><span>PKR.4000</span></div>
             <div><span>Discount:</span><span>20% OFF</span></div>
             <div><span>Current Price:</span><span>PKR. 3200</span></div>
-                        <div id="photo-change-btn">
+            <div id="photo-change-btn">
               <a href="">&#171;</a><a href="">&#187;</a>
             </div>
-          <div id="add-cart-btn">
+            <div id="add-cart-btn">
               <a href=""
                 >ADD TO CART &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i
                   class="fa-solid fa-cart-shopping fa-bounce"
@@ -202,9 +201,62 @@
         ------------------------------------------------------>
       </div>
     </section>
-    <div class="cart-container">      
+    <!----------------------------------------------------
+         CART START
+        ------------------------------------------------------>
+    <div class="cart-container">
       <i class="fa-regular fa-circle-xmark"></i>
+      <h1>CART</h1>
+      <div class="cart-main-div">
+        <div class="cart-header">
+          <div>Delete</div>
+          <div>Photo</div>
+          <div>SKU</div>
+          <div>Size</div>
+          <div>Color</div>
+          <div>Price</div>
+        </div>
+        <div class="cart">
+          <div><i class="fa-solid fa-trash"></i></div>
+          <div class="cart-photo"><img src="images/women.jpg" alt="" /></div>
+          <div>56964</div>
+          <div>L</div>
+          <div>Green</div>
+          <div>PKR. 2000</div>
+        </div>
+        <div class="cart">
+          <div><i class="fa-solid fa-trash"></i></div>
+          <div class="cart-photo"><img src="images/women.jpg" alt="" /></div>
+          <div>56964</div>
+          <div>L</div>
+          <div>Green</div>
+          <div>PKR. 2000</div>
+        </div>
+        <div class="cart">
+          <div><i class="fa-solid fa-trash"></i></div>
+          <div class="cart-photo"><img src="images/women.jpg" alt="" /></div>
+          <div>56964</div>
+          <div>L</div>
+          <div>Green</div>
+          <div>PKR. 2000</div>
+        </div>
+        <div class="cart">
+          <div class="cart-photo"></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div style="background-color: rgb(238, 238, 238); font-size: 1.5vw">
+            <b>Total</b>
+          </div>
+          <div style="background-color: rgb(238, 238, 238); font-size: 1.5vw">
+            <b>PKR. 6000</b>
+          </div>
+        </div>
+      </div>
     </div>
+    <!----------------------------------------------------
+         CART END
+        ------------------------------------------------------>
   </body>
   <script src="js/women-collection.js"></script>
 </html>
