add images in card

--- a/women-dresses.html
+++ b/women-dresses.html
@@ -175,7 +175,9 @@
         </div>
         <div class="cart">
           <div><i class="fa-solid fa-trash"></i></div>
-          <div class="cart-photo"><img src="images/women-dresses/product (1).jpg" alt="" /></div>
+          <div class="cart-photo">
+            <img src="images/women-dresses/product (1).jpg" alt="" />
+          </div>
           <div>56964</div>
           <div>L</div>
           <div>Green</div>
@@ -183,7 +185,9 @@
         </div>
         <div class="cart">
           <div><i class="fa-solid fa-trash"></i></div>
-          <div class="cart-photo"><img src="images/women-dresses/product (1).jpg" alt="" /></div>
+          <div class="cart-photo">
+            <img src="images/women-dresses/product (1).jpg" alt="" />
+          </div>
           <div>56964</div>
           <div>L</div>
           <div>Green</div>
@@ -191,7 +195,9 @@
         </div>
         <div class="cart">
           <div><i class="fa-solid fa-trash"></i></div>
-          <div class="cart-photo"><img src="images/women-dresses/product (1).jpg" alt="" /></div>
+          <div class="cart-photo">
+            <img src="images/women-dresses/product (1).jpg" alt="" />
+          </div>
           <div>56964</div>
           <div>L</div>
           <div>Green</div>
