--- a/women-dresses.html
+++ b/women-dresses.html
@@ -67,7 +67,7 @@
     <nav>
       <div class="nav-left">
         <a href="index.html"
-          ><img src="images/logo.png" alt="ROYAL THREAD" class="logo"
+          ><img src="images/logo.webp" alt="ROYAL THREAD" class="logo"
         /></a>
       </div>
       <div class="nav-right">
