--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="google-site-verification" content="hecwqYrSWskdU6foIhsOepCXrQd6_AG2spWVEAC_rOo" />
+    <meta
+      name="google-site-verification"
+      content="hecwqYrSWskdU6foIhsOepCXrQd6_AG2spWVEAC_rOo"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ROYAL THREAD</title>
@@ -225,6 +228,17 @@
     </section>
     <!------------------------------------------------------
          ABOUT US SECTION END
+    ------------------------------------------------------>
+    <!------------------------------------------------------
+         FOOTER SECTION START
+    ------------------------------------------------------>
+    <section id="footer">
+      <img src="images/logo.webp" alt="" />
+      <p>HELP LINE NUMBER: +92330362257</p>
+      <p>© 2020 All Rights Reserved. ROYAL THREAD</p>
+    </section>
+    <!------------------------------------------------------
+         FOOTER SECTION END
     ------------------------------------------------------>
     <script src="js/index.js"></script>
   </body>
